--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,19 @@
 PORT = 8080
+
+DB_NAME_PRODUCTION=hsl-bike-app
+DATABASE_URL_PRODUCTION=
+DB_USER_PRODUCTION=root
+DB_PASSWORD_PRODUCTION=
+DB_HOST_PRODUCTION=localhost
+
+DB_NAME_DEVELOPMENT=hsl-bike-app
+DATABASE_URL_DEVELOPMENT=
+DB_USER_DEVELOPMENT=root
+DB_PASSWORD_DEVELOPMENT=
+DB_HOST_DEVELOPMENT=localhost
+
+DB_NAME_TEST=hsl-bike-app
+DATABASE_URL_TEST=
+DB_USER_TEST=root
+DB_PASSWORD_TEST=
+DB_HOST_TEST=localhost
