--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
@@ -24,6 +25,7 @@
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "cypress": "^12.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
