--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tsc": "tsc",
     "dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
+    "start:test": "NODE_ENV=test ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
