--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-client": "npm run rm-dist && cd ./client && npm run build && cd .. ",
     "build-app": "npm run rm-build && npm run build-client && tsc",
     "start": "NODE_ENV=production node build/index.js",
-    "dev": "npm run build-client && NODE_ENV=development ts-node-dev src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
     "start:test": "NODE_ENV=test ts-node-dev src/index.ts"
   },
