--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.1",
@@ -21,6 +22,7 @@
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/react": "^18.0.26",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.0.9",
